Criação estruta hmtl e css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meu Site</title>
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
 <body>
   <!-- Header -->
-  <hear>
-    <img src="./assets/logo.png" alt="Logo da Empresa Lenny Neves">
+  <header>
+    <img src="./assets/logo.png" alt="Logo da Empresa ">
     <!--Menu do Site-->
     <nav>
       <ul>
@@ -23,7 +24,7 @@
       </ul>
     </nav>
     <!--End Menu do Site-->
-  </hear>
+  </header>
   <!-- END Header -->
   <!--Container -->
   <main>
