--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
     <!--Menu do Site-->
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Sobre</li>
-        <li>Portifólio</li>
-        <li>Contato</li>
-        <li>Curriculo</li>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Sobre</a>
+        </li>
+        <li>
+          <a href="#">Portifólio</a>
+        </li>
+        <li>
+          <a href="#">Contato</a>
+        </li>
+        <li>
+          <a href="#" class="btn btn-laranja">Curriculo</a>
+        </li>
       </ul>
     </nav>
     <!--End Menu do Site-->
