--- a/index.html
+++ b/index.html
@@ -11,35 +11,37 @@
 
 <body>
   <!-- Header -->
-  <header>
-    <img src="./assets/logo.png" alt="Logo da Empresa ">
-    <!--Menu do Site-->
-    <nav>
-      <ul>
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">Sobre</a>
-        </li>
-        <li>
-          <a href="#">Portifólio</a>
-        </li>
-        <li>
-          <a href="#">Contato</a>
-        </li>
-        <li>
-          <a href="#" class="btn btn-laranja">Curriculo</a>
-        </li>
-      </ul>
-    </nav>
+  <header class="container">
+    <section class="row">
+      <img src="./assets/logo.png" alt="Logo da Empresa ">
+      <!--Menu do Site-->
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Sobre</a>
+          </li>
+          <li>
+            <a href="#">Portifólio</a>
+          </li>
+          <li>
+            <a href="#">Contato</a>
+          </li>
+          <li>
+            <a href="#" class="btn btn-laranja">Curriculo</a>
+          </li>
+        </ul>
+      </nav>
+    </section>
     <!--End Menu do Site-->
   </header>
   <!-- END Header -->
   <!--Container -->
-  <main>
+  <main class="container">
     <!--Section Conteudo Site-->
-    <section>
+    <section class="row">
       <article>
         <h1>Web Design</h1>
         <h2>Landing Page</h2>
