--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!--Container -->
   <main class="container">
     <!--Section Conteudo Site-->
-    <section class="row">
+    <section class="row sobre-web-designer">
       <article>
         <h1>Web Design</h1>
         <h2>Landing Page</h2>
@@ -50,7 +50,7 @@
           standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
           make
           a type specimen book. It has survived not only five centuries, but also</p>
-        <a href="#">Saiba Mais</a>
+        <a href="#" class="btn btn-laranja">Saiba Mais</a>
       </article>
       <figcaption>
         <img src="/aula03/assets/pessoas-construindo-pc.png" alt="Criação de Site">
