inserindo img bacground e iniciar footer

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   </main>
   <!-- end Container-->
   <!--Footer-->
-  <footer>
-    <ul>
+  <footer class="container">
+    <ul class="row">
       <li>
         <a href="#"><img src="/aula03/assets/logo-insta.png" alt="Instagran"></a>
       </li>
