correção caminho imagem contrutos e instagran

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="#" class="btn btn-laranja">Saiba Mais</a>
       </article>
       <figcaption>
-        <img src="/aula03/assets/pessoas-construindo-pc.png" alt="Criação de Site">
+        <img src="./assets/pessoas-construindo-pc.png" alt="Criação de Site">
       </figcaption>
     </section>
     <!-- End Section Conteudo Site-->
@@ -63,7 +63,7 @@
   <footer class="container">
     <ul class="row">
       <li>
-        <a href="#"><img src="/aula03/assets/logo-insta.png" alt="Instagran"></a>
+        <a href="#"><img src="./assets/logo-insta.png" alt="Instagran"></a>
       </li>
       <li>
         <a href="#"><img src="./assets/logo-twitter.png" alt="Twitter"></a>
