--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!--Section Conteudo Site-->
     <section class="row sobre-web-designer">
       <article>
-        <h1>Web Design</h1>
+        <h1>Web Designer</h1>
         <h2>Landing Page</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
           industry's
